fix: order of the show on map on mobile (#584)

--- a/apps/sports-helsinki/src/domain/search/combinedSearch/combinedSearchPage.module.scss
+++ b/apps/sports-helsinki/src/domain/search/combinedSearch/combinedSearchPage.module.scss
@@ -119,7 +119,16 @@ $buttonWidth: 180px;
     justify-content: space-between;
 
     @include respond-below(l) {
-      flex-direction: column;
+      display: grid;
+      grid-template-columns: 1fr;
+      & > div:nth-child(2) {
+        order: 2;
+      }
+
+      & > button {
+        order: 1;
+        margin: 0 0 var(--spacing-xs) 0;
+      }
     }
 
     @include respond-below(l) {
